# magazyn

./: CMakeLists.txt  Testowy.mtw  errors.h  lista.c  lista.h  main.c  menu.c  menu.h  plik.c  plik.h  towar.c  towar.h
